CHANGES IN FLTK 1.1.2

	- The Fl_Tabs widget should no longer be a focus hog;
	  previously it would take focus from child widgets.
	- The file chooser now activates the OK button when
	  opening a directory in directory selection mode.
	- Fixed a bug in the file chooser when entering an
	  absolute path.
	- Back-ported some FLTK 2.0 tooltip changes to eliminate
	  erroneous tooltip display.
	- MacOS windows were resizable, even when size_range
	  would not allow for resizing.
	- Fl_Text_Editor now supports Shift+Delete, Ctrl+Insert,
	  and Shift+Insert for cut, copy, and paste,
	  respectively.
	- Fl_Text_Display didn't restore the mouse pointer when
	  hidden.
	- Fl::arg() now ignores the MacOS X -psn_N_NNNNN option.
	- Added another change to the WIN32 redraw handling for
	  the MingW compilers.
	- Fl_File_Chooser didn't handle WIN32 home directories
	  that used backslashes instead of forward slashes.
	- Fl_Text_Display didn't limit the resize height to 1
	  line.
	- Fl_Scrollbar widgets incorrectly took keyboard focus
	  when clicked on. This caused widgets such as
	  Fl_Text_Display to hide the cursor when you scrolled
	  the text.


CHANGES IN FLTK 1.1.1

	- Fl_Text_Display didn't always show the cursor.
	- Fl_Tabs now only redraws the tabs themselves when
	  making focus changes.  This reduces flicker in tabbed
	  interfaces.
	- The WIN32 redraw handler now correctly merges the FLTK
	  and Windows redraw regions.
	- The Fl_Text_* widgets use the C++ bool type, which is
	  not supported by older C++ compilers.  Added a
	  configure check and workaround code for this.
	- Fl_X::set_xid() didn't initialize the backbuffer_bad
	  element that was used with XDBE.
	- Fl_Shared_Image::uncache() was not implemented.
	- Fl::set_font() didn't 0-initialize all font descriptor
	  data.
	- Some OpenGL implementations don't support single-
	  buffered visuals. The Fl_Gl_Window class now emulates
	  single-buffered windows using double-buffered
	  windows.