@@ -1,5 +1,10 @@
 CHANGES IN FLTK 1.1.2
 
+	- Added a new FL_COMMAND state bit which maps to FL_CTRL
+	  on X11 and WIN32 and FL_META on MacOS.
+	- MacOS keyboard modifiers mapping corrections. Cmd and
+	  Control are no longer swapped, event_key and event_text
+	  return (mostly) the same values as on other platforms.
 	- The Fl_Tabs widget should no longer be a focus hog;
 	  previously it would take focus from child widgets.
 	- The file chooser now activates the OK button when
